--- a/css/style.css
+++ b/css/style.css
@@ -71,9 +71,10 @@ body {
   height: 100%;
   background-color: #fff;
   color: #222;
-  font-family: "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  font-family: "Poppins", "Arial", sans-serif;
+  font-weight: 700;
+  font-size: 0.875rem;
+  line-height: 1.3125rem;
 }
 
 img {
