--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,64 @@ input:-webkit-autofill:focus {
 } */
 
 
+.form {
+  display: flex;
+  align-items: center;
+  padding-bottom: 3rem;
+  border-bottom: 1px solid var(--line);
+}
+
+.form__group {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__group:not(:last-child) {
+  margin-right: 2rem;
+}
+
+.form__label {
+  font-size: 0.875rem;
+  line-height: 1.3125rem;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: var(--grey);
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+}
+
+.form__label--err {
+  color: var(--red);
+}
+
+.form__input {
+  width: 10rem;
+  border-radius: 0.5rem;
+  padding: 0.75rem;
+  font-size: 2rem;
+  line-height: 3rem;
+  border: 1px solid var(--line);
+  cursor: pointer;
+}
+
+.form__input:focus {
+  outline: 0;
+}
+
+.form__input:placeholder-shown {
+  opacity: 0.5;
+}
+
+.form__input--err {
+  border: 1px solid var(--red);
+}
+.form__err--text {
+  color:var(--red);
+  font-weight: 400;
+  font-style: italic;
+}
+
+
 /* RETINA BACKGROUND IMAGES */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
