--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 @font-face {
   font-family: 'Poppins';
   src: url('../fonts/Poppins-Bold.woff2') format('woff2'),
-      url('../fonts/Poppins-Bold.woff') format('woff');
+  url('../fonts/Poppins-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -20,7 +20,7 @@
 @font-face {
   font-family: 'Poppins';
   src: url('../fonts/Poppins-Italic.woff2') format('woff2'),
-      url('../fonts/Poppins-Italic.woff') format('woff');
+  url('../fonts/Poppins-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -29,7 +29,7 @@
 @font-face {
   font-family: 'Poppins';
   src: url('../fonts/Poppins-ExtraBoldItalic.woff2') format('woff2'),
-      url('../fonts/Poppins-ExtraBoldItalic.woff') format('woff');
+  url('../fonts/Poppins-ExtraBoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -89,14 +89,14 @@ img {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
-  -webkit-text-fill-color: var(--heading-color);
-  -webkit-box-shadow: 0 0 0px 40rem #ffff inset;
+-webkit-text-fill-color: var(--heading-color);
+-webkit-box-shadow: 0 0 0px 40rem #ffff inset;
 } */
 
 /* PLACEHOLDER STYLE */
 /*
 ::placeholder {
-  color: rgba(52, 49, 61, 0.5);
+color: rgba(52, 49, 61, 0.5);
 } */
 
 
@@ -205,6 +205,10 @@ input:-webkit-autofill:focus {
   display: flex;
   align-items: center;
 }
+
+.age__text {
+  flex-grow: 1;
+}
 .age__descripton {
   color: var(--purple);
 }
@@ -216,5 +220,52 @@ only screen and (     -o-min-device-pixel-ratio: 2/1),
 only screen and (        min-device-pixel-ratio: 2),
 only screen and (                min-resolution: 192dpi),
 only screen and (                min-resolution: 2dppx) {
+
+}
+
+@media only screen and (max-width:890px) {
+  .age {
+    padding: 3rem 1.5rem;
+    border-radius: 1.5rem 1.5rem 6.25rem 1.5rem;
+  }
+
+  .form__btn {
+    left: 120px;
+  }
+
+  .form {
+    padding-bottom: 4rem;
+  }
+
+  .form__label {
+    font-size: 0.75rem;
+    line-height: 1.125rem;
+    margin-bottom: 0.25rem;
+  }
+
+  .form__input {
+    width: 5.5rem;
+    font-size: 1.25rem;
+    line-height: 1.875rem;
+  }
+
+  .form__group:not(:last-child) {
+    margin-right: 1rem;
+  }
+
+  .age__info {
+    padding-bottom: 4rem;
+    font-size: 3.5rem;
+    width: 18.5rem;
+  }
+}
+
+@media only screen and (max-width:376px) {
+  .age {
+    padding: 2rem 1rem;
+}
+.form__btn {
+  top: 7.8rem;
+}
 
 }
